[project]
name = "notebook-to-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chatollama>=0.2.13",
    "dotenv>=0.9.9",
    "langchain>=1.2.13",
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    "nbformat>=5.10.0",
    "reportlab>=4.0.0",
    "pygments>=2.17.0",
]
